--- a/app/globals.css
+++ b/app/globals.css
@@ -16,21 +16,12 @@
   }
 }
 
-/* body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-} */
-
 @layer utilities {
   .text-balance {
     text-wrap: balance;
   }
 }
+
 /* .hamburger {
   cursor: pointer;
   user-select: none;
@@ -76,3 +67,27 @@
   transform-origin: 0 0;
   transition: 0.4s;
 } */
+footer{
+  @apply  font-sans bg-gradient-to-br from-slate-800 via-black
+}
+.e_footer {
+  @apply text-slate-400 leading-relaxed ;
+
+}
+.footer_sections1 h3,
+.footer_sections h3,
+.f_contact h3 {
+  @apply text-slate-200 text-[14px] font-normal
+}
+
+.footer_sections1,
+.footer_sections,
+.f_contact {
+  @apply max-w-[28rem] text-[13px] font-medium grid ;
+}
+.c_footer {
+  @apply pt-6;
+}
+.text {
+  @apply text-[13px] font-medium;
+}
