--- a/app/globals.css
+++ b/app/globals.css
@@ -73,3 +73,18 @@ footer{
 .Navbar{
   @apply  font-sans bg-gradient-to-tr from-gray-800  bg-black
 }
+@keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {
+    transform: translateY(0);
+  }
+  40% {
+    transform: translateY(-30px);
+  }
+  60% {
+    transform: translateY(-15px);
+  }
+}
+
+.animate-bounce {
+  animation: bounce 1s infinite;
+}
